# cargo-workspace-analyzer

./: .gitignore  Cargo.toml  README.md
src/: arguments.rs  circular_deps_finder.rs  dependency_filter.rs  exporter.rs  graph.rs  graph_creation.rs  main.rs  manifest_collector.rs  metrics.rs  output.rs  package_count.rs  package_counter.rs  root_manifest.rs  save_to_disk.rs  tui.rs
src/diagram/: circle_detector.rs  diagram_creation.rs  graph.rs  mod.rs
src/diagram_creation/: mod.rs
src/diagram_creation/circle_detector/: graph.rs  graph_enhancements.rs  mod.rs
src/diagram_creation/mermaid_generator/: graph_creation.rs  mod.rs
src/manifest_collector/: manifest_reader.rs  mod.rs  nested.rs  nested_types.rs  package_manifests.rs  reader.rs  root.rs  root_types.rs  virtual_manifest.rs
src/manifest_types/: commons.rs  mod.rs  nested.rs  root.rs
src/manifests_collector/: filter.rs  graph_creation.rs  mod.rs  nested.rs  root.rs
src/types/: mod.rs  nested.rs  root.rs
tests/: test.rs
