[package]
name = "cargo-workspace-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Jan Arends <kontakt@jaads.de>"]
description = "A CLI tool that counts the amount of packages in a cargo workspace"
license = "GPL-3.0-only"
repository = "https://github.com/jaads/cargo-workspace-analyzer"
homepage = "https://github.com/jaads/cargo-workspace-analyzer"
keywords = ["cargo", "workspace", "pacakges", "analyzer"]
categories = ["command-line-utilities", "development-tools", "filesystem"]
readme = "README.md"

[dependencies]
walkdir = "2.5.0"
argh = "0.1.12"

[dev-dependencies]
tempfile = "3.13.0"
assert_fs = "1.1.2"
predicates = "3.1.2"
assert_cmd = "2.0.16"